feat: Display win or lose on page for every round

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       </div>
     </div>
     <div class="score">
-      <p>Computer __</p>
-      <p>Player __</p>
+      <p>Computer __   Player __</p>
     </div>
     <button class="reset-button">Restart</button>
 
