--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="score">
       <p>Computer __   Player __</p>
     </div>
-    <button class="reset-button">Restart</button>
+    <button class="restart-button">Restart</button>
 
     <script src="script.js"></script>
   </body>
